Changing log level of spring security to display useful information on the console

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=SpringSecurityEasyBytes
 spring.security.user.name=user
 spring.security.user.password=123
+
+logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
