--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=SpringSecurityEasyBytes
 spring.security.user.name=user
 spring.security.user.password=123
-
 logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVEL:TRACE}
+logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
